--- a/image_dbs.html
+++ b/image_dbs.html
@@ -55,6 +55,7 @@
     <h2>
       <span class='mw-headline' id='Files'>Files</span>
     </h2>
+    
     <table class='wikitable sortable'>
       <tr>
         <th>
@@ -160,12 +161,12 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-03
+            2015-06-02
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            2015-04-20
+            2015-07-01
           </p>
         </td>
         <td style='color:black; vertical-align:top; text-align:right;'>
@@ -180,16 +181,52 @@
         </td>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-04-03_wiki_file_core.7z" class="external text" rel="nofollow">images.core</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-04-03_wiki_file_ns-000_part-1.7z" class="external text" rel="nofollow">images.main articles.part-1</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-04-03_wiki_file_ns-000_part-2.7z" class="external text" rel="nofollow">images.main articles.part-2</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-04-03_wiki_file_ns-000_part-3.7z" class="external text" rel="nofollow">images.main articles.part-3</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-04-03_wiki_file_ns-000_part-4.7z" class="external text" rel="nofollow">images.main articles.part-4</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-04-03_wiki_file_ns-000_part-5.7z" class="external text" rel="nofollow">images.main articles.part-5</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-04-03_wiki_file_ns-000_part-6.7z" class="external text" rel="nofollow">images.main articles.part-6</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-04-03_wiki_file_ns-000_part-7.7z" class="external text" rel="nofollow">images.main articles.part-7</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-04-03_wiki_file_ns-000_part-8.7z" class="external text" rel="nofollow">images.main articles.part-8</a><br>
-             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-04-03_wiki_file_ns-100.7z" class="external text" rel="nofollow">images.other articles</a><br>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_core.7z" class="external text" rel="nofollow">images.core</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_ns-000_part-1.7z" class="external text" rel="nofollow">images.main articles.part-1</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_ns-000_part-2.7z" class="external text" rel="nofollow">images.main articles.part-2</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_ns-000_part-3.7z" class="external text" rel="nofollow">images.main articles.part-3</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_ns-000_part-4.7z" class="external text" rel="nofollow">images.main articles.part-4</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_ns-000_part-5.7z" class="external text" rel="nofollow">images.main articles.part-5</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_ns-000_part-6.7z" class="external text" rel="nofollow">images.main articles.part-6</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_ns-000_part-7.7z" class="external text" rel="nofollow">images.main articles.part-7</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_ns-000_part-8.7z" class="external text" rel="nofollow">images.main articles.part-8</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_file_v2b_ns-100.7z" class="external text" rel="nofollow">images.other articles</a><br>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://en.wikipedia.org/wiki/">https://en.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-06-02
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2015-06-27
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            28.8
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .xowa
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_wiki_core.7z" class="external text" rel="nofollow">html.core</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_wiki_html_ns-000_part-1.7z" class="external text" rel="nofollow">html.main articles.part-1</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_wiki_html_ns-000_part-2.7z" class="external text" rel="nofollow">html.main articles.part-2</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_wiki_html_ns-000_part-3.7z" class="external text" rel="nofollow">html.main articles.part-3</a><br>
+             <a href="https://archive.org/download/Xowa_enwiki_latest/Xowa_enwiki_2015-06-02_wiki_html_ns-100.7z" class="external text" rel="nofollow">html.other articles</a><br>
           </p>
         </td>
       </tr>
@@ -1095,7 +1132,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/es.wikipedia.org/wiki/">http://es.wikipedia.org</a>
+            <a href="https://es.wikipedia.org/wiki/">http://es.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -1132,13 +1169,13 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/es.wiktionary.org/wiki/">https://es.wiktionary.org</a><br>
-            <a href="/site/es.wikisource.org/wiki/">https://es.wikisource.org</a><br>
-            <a href="/site/es.wikivoyage.org/wiki/">https://es.wikivoyage.org</a><br>
-            <a href="/site/es.wikiquote.org/wiki/">https://es.wikiquote.org</a><br>
-            <a href="/site/es.wikibooks.org/wiki/">https://es.wikibooks.org</a><br>
-            <a href="/site/es.wikiversity.org/wiki/">https://es.wikiversity.org</a><br>
-            <a href="/site/es.wikinews.org/wiki/">https://es.wikinews.org</a><br>
+            <a href="https://es.wiktionary.org/wiki/">https://es.wiktionary.org</a><br>
+            <a href="https://es.wikisource.org/wiki/">https://es.wikisource.org</a><br>
+            <a href="https://es.wikivoyage.org/wiki/">https://es.wikivoyage.org</a><br>
+            <a href="https://es.wikiquote.org/wiki/">https://es.wikiquote.org</a><br>
+            <a href="https://es.wikibooks.org/wiki/">https://es.wikibooks.org</a><br>
+            <a href="https://es.wikiversity.org/wiki/">https://es.wikiversity.org</a><br>
+            <a href="https://es.wikinews.org/wiki/">https://es.wikinews.org</a><br>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -1170,39 +1207,6 @@
         <td style='color:black; vertical-align:top;'>
           <p>
             <a href="https://archive.org/download/Xowa_eswiki_latest/Xowa_esbundle_2015-06-02.7z" class="external text" rel="nofollow">wikis and images</a><br>
-          </p>
-        </td>
-      </tr>
-      <tr style='color:black; border-collapse:collapse;'>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://ru.wikipedia.org/wiki/">https://ru.wikipedia.org</a>
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            2015-02-12
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-        </td>
-        <td style='color:black; vertical-align:top; text-align:right;'>
-          <p>
-            31
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            .sqlite3
-          </p>
-        </td>
-        <td style='color:black; vertical-align:top;'>
-          <p>
-            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-02-12_wiki.7z" class="external text" rel="nofollow">wiki: 2015-02-12</a><br>
-            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2014-10-07_images_001.7z" class="external text" rel="nofollow">images: 2014-10-07 #1</a><br>
-            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2014-10-07_images_002.7z" class="external text" rel="nofollow">images: 2014-10-07 #2</a><br>
-            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2014-10-07_images_003.7z" class="external text" rel="nofollow">images: 2014-10-07 #3</a><br>
-            <a href="https://archive.org/download/Xowa_ruwiki_latest/Xowa_ruwiki_2015-02-12_images_update.7z" class="external text" rel="nofollow">images: 2015-02-12</a><br>
           </p>
         </td>
       </tr>
@@ -1296,7 +1300,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/sv.wikipedia.org/wiki/">https://sv.wikipedia.org</a>
+            <a href="https://sv.wikipedia.org/wiki/">https://sv.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -1332,13 +1336,13 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/sv.wiktionary.org/wiki/">https://sv.wiktionary.org</a><br>
-            <a href="/site/sv.wikisource.org/wiki/">https://sv.wikisource.org</a><br>
-            <a href="/site/sv.wikivoyage.org/wiki/">https://sv.wikivoyage.org</a><br>
-            <a href="/site/sv.wikiquote.org/wiki/">https://sv.wikiquote.org</a><br>
-            <a href="/site/sv.wikibooks.org/wiki/">https://sv.wikibooks.org</a><br>
-            <a href="/site/sv.wikiversity.org/wiki/">https://sv.wikiversity.org</a><br>
-            <a href="/site/sv.wikinews.org/wiki/">https://sv.wikinews.org</a><br>
+            <a href="https://sv.wiktionary.org/wiki/">https://sv.wiktionary.org</a><br>
+            <a href="https://sv.wikisource.org/wiki/">https://sv.wikisource.org</a><br>
+            <a href="https://sv.wikivoyage.org/wiki/">https://sv.wikivoyage.org</a><br>
+            <a href="https://sv.wikiquote.org/wiki/">https://sv.wikiquote.org</a><br>
+            <a href="https://sv.wikibooks.org/wiki/">https://sv.wikibooks.org</a><br>
+            <a href="https://sv.wikiversity.org/wiki/">https://sv.wikiversity.org</a><br>
+            <a href="https://sv.wikinews.org/wiki/">https://sv.wikinews.org</a><br>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -1376,7 +1380,7 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/ja.wikipedia.org/wiki/">https://ja.wikipedia.org</a>
+            <a href="https://ja.wikipedia.org/wiki/">https://ja.wikipedia.org</a>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -1412,12 +1416,12 @@
       <tr style='color:black; border-collapse:collapse;'>
         <td style='color:black; vertical-align:top;'>
           <p>
-            <a href="/site/ja.wiktionary.org/wiki/">https://ja.wiktionary.org</a><br>
-            <a href="/site/ja.wikisource.org/wiki/">https://ja.wikisource.org</a><br>
-            <a href="/site/ja.wikiquote.org/wiki/">https://ja.wikiquote.org</a><br>
-            <a href="/site/ja.wikibooks.org/wiki/">https://ja.wikibooks.org</a><br>
-            <a href="/site/ja.wikiversity.org/wiki/">https://ja.wikiversity.org</a><br>
-            <a href="/site/ja.wikinews.org/wiki/">https://ja.wikinews.org</a><br>
+            <a href="https://ja.wiktionary.org/wiki/">https://ja.wiktionary.org</a><br>
+            <a href="https://ja.wikisource.org/wiki/">https://ja.wikisource.org</a><br>
+            <a href="https://ja.wikiquote.org/wiki/">https://ja.wikiquote.org</a><br>
+            <a href="https://ja.wikibooks.org/wiki/">https://ja.wikibooks.org</a><br>
+            <a href="https://ja.wikiversity.org/wiki/">https://ja.wikiversity.org</a><br>
+            <a href="https://ja.wikinews.org/wiki/">https://ja.wikinews.org</a><br>
           </p>
         </td>
         <td style='color:black; vertical-align:top;'>
@@ -2658,6 +2662,35 @@
         <td style='color:black; vertical-align:top;'>
           <p>
             <a href="https://archive.org/download/Xowa_etwiki_latest/Xowa_etbundle_2014-10-24.7z" class="external text" rel="nofollow">download</a><br>
+          </p>
+        </td>
+      </tr>
+      <tr style='color:black; border-collapse:collapse;'>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://de.wikipedia.org/wiki/">https://de.wikipedia.org</a>
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            2014-10-24
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+        </td>
+        <td style='color:black; vertical-align:top; text-align:right;'>
+          <p>
+            3.1
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            .sqlite3
+          </p>
+        </td>
+        <td style='color:black; vertical-align:top;'>
+          <p>
+            <a href="https://archive.org/download/Xowa_dewiki_latest/Xowa_dewiki_2014-10-24_images_update.7z" class="external text" rel="nofollow">download</a>
           </p>
         </td>
       </tr>
