--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 </tr>
 <tr>
 <td>website:</td>
-<td><a href="http://xowa.sourceforge.net" class="external text" rel="nofollow">http://xowa.sourceforge.net</a></td>
+<td><a href="https://gnosygnu.github.io/xowa/" class="external text" rel="nofollow">https://gnosygnu.github.io/xowa/</a></td>
 </tr>
 <tr>
 <td>developer:</td>
@@ -381,13 +381,13 @@ d17f529216e011db77e22365de09335a459d78584fb1c29066e79fe422b904f2</tt></td>
 
 <div id='mw-panel' class='noprint'>
   <div id='p-logo'>
-    <a style="background-image: url(xowa-logo.png);" href="http://xowa.sourceforge.net" title="Visit the main page"></a>
+    <a style="background-image: url(xowa-logo.png);" href="https://gnosygnu.github.io/xowa/" title="Visit the main page"></a>
   </div>
   <div class="portal" id='xowa-portal-home'>
     <h3>XOWA</h3>
     <div class="body">
       <ul>
-        <li><a href="http://xowa.sourceforge.net" title='Visit the main page'>Main page</a></li>
+        <li><a href="https://gnosygnu.github.io/xowa/" title='Visit the main page'>Main page</a></li>
         <li><a href="blog.html" title='Follow XOWA''s development process'>Blog</a></li>
         <li><a href="screenshots.html" title='See screenshots of XOWA'>Screenshots</a></li>
         <li><a href="download.html" title='Download the XOWA application'>Download XOWA</a></li>
