--- a/installation.html
+++ b/installation.html
@@ -65,7 +65,7 @@
 <h2><span class='mw-headline' id='Download_XOWA'> Download XOWA </span></h2>
 
 <ul>
-  <li> Download an "xowa_app_*.zip" from <a href="http://xowa.sourceforge.net/download.html">the download page</a>
+  <li> Download an "xowa_app_*.zip" from <a href="https://gnosygnu.github.io/xowa//download.html">the download page</a>
   </li>
   <li> Unzip to the xowa root folder. When finished, you will have a file called <b>/xowa/xowa.gfs</b> as well as many other files and directories.
   </li>
@@ -112,13 +112,13 @@
 
 <div id='mw-panel' class='noprint'>
   <div id='p-logo'>
-    <a style="background-image: url(xowa-logo.png);" href="http://xowa.sourceforge.net" title="Visit the main page"></a>
+    <a style="background-image: url(xowa-logo.png);" href="https://gnosygnu.github.io/xowa/" title="Visit the main page"></a>
   </div>
   <div class="portal" id='xowa-portal-home'>
     <h3>XOWA</h3>
     <div class="body">
       <ul>
-        <li><a href="http://xowa.sourceforge.net" title='Visit the main page'>Main page</a></li>
+        <li><a href="https://gnosygnu.github.io/xowa/" title='Visit the main page'>Main page</a></li>
         <li><a href="blog.html" title='Follow XOWA''s development process'>Blog</a></li>
         <li><a href="screenshots.html" title='See screenshots of XOWA'>Screenshots</a></li>
         <li><a href="download.html" title='Download the XOWA application'>Download XOWA</a></li>
