--- a/reviews.html
+++ b/reviews.html
@@ -28,7 +28,7 @@
 <p>Want to read what others have said above XOWA? Visit any one of the articles below in your preferred language.<br/>
 </p>
 
-<p>Got another link? Submit one through the <a href="http://xowa.sourceforge.net/contact.html">Feedback page</a>.
+<p>Got another link? Submit one through the <a href="https://gnosygnu.github.io/xowa//contact.html">Feedback page</a>.
 </p>
 
 <div align='right'><span style='font-size:xx-small'>Last edited: 2015-03-14</span></div>
@@ -1114,13 +1114,13 @@
 
 <div id='mw-panel' class='noprint'>
   <div id='p-logo'>
-    <a style="background-image: url(xowa-logo.png);" href="http://xowa.sourceforge.net" title="Visit the main page"></a>
+    <a style="background-image: url(xowa-logo.png);" href="https://gnosygnu.github.io/xowa/" title="Visit the main page"></a>
   </div>
   <div class="portal" id='xowa-portal-home'>
     <h3>XOWA</h3>
     <div class="body">
       <ul>
-        <li><a href="http://xowa.sourceforge.net" title='Visit the main page'>Main page</a></li>
+        <li><a href="https://gnosygnu.github.io/xowa/" title='Visit the main page'>Main page</a></li>
         <li><a href="blog.html" title='Follow XOWA''s development process'>Blog</a></li>
         <li><a href="screenshots.html" title='See screenshots of XOWA'>Screenshots</a></li>
         <li><a href="download.html" title='Download the XOWA application'>Download XOWA</a></li>
