--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
 </p>
 
 <ul>
-  <li> Post to XOWA's discussion page: <a href="http://sourceforge.net/p/xowa/discussion/." class="external text" rel="nofollow">http://sourceforge.net/p/xowa/discussion/.</a> If you are not a SourceForge user, you can still post as &quot;Anonymous&quot;
+  <li> Post to XOWA's discussion page: <a href="https://github.com/gnosygnu/xowa/issues/" class="external text" rel="nofollow">https://github.com/gnosygnu/xowa/issues</a> If you are not a SourceForge user, you can still post as &quot;Anonymous&quot;
   </li>
   <li> Post to my user talk page: <a href="http://en.wikipedi&#97;.org/wiki/User_talk:gnosygnu" class="external text" rel="nofollow">http://en.wikipedi&#97;.org/wiki/User_talk:gnosygnu</a>. If you are not a Wikipedia user, you will still be able to post messages (just like editing any other part of Wikipedia)
   </li>
@@ -48,13 +48,13 @@
 
 <div id='mw-panel' class='noprint'>
   <div id='p-logo'>
-    <a style="background-image: url(xowa-logo.png);" href="http://xowa.sourceforge.net" title="Visit the main page"></a>
+    <a style="background-image: url(xowa-logo.png);" href="https://gnosygnu.github.io/xowa/" title="Visit the main page"></a>
   </div>
   <div class="portal" id='xowa-portal-home'>
     <h3>XOWA</h3>
     <div class="body">
       <ul>
-        <li><a href="http://xowa.sourceforge.net" title='Visit the main page'>Main page</a></li>
+        <li><a href="https://gnosygnu.github.io/xowa/" title='Visit the main page'>Main page</a></li>
         <li><a href="blog.html" title='Follow XOWA''s development process'>Blog</a></li>
         <li><a href="screenshots.html" title='See screenshots of XOWA'>Screenshots</a></li>
         <li><a href="download.html" title='Download the XOWA application'>Download XOWA</a></li>
