--- a/setup_other_wikis.html
+++ b/setup_other_wikis.html
@@ -21,7 +21,7 @@
       <span class='mw-headline' id='Overview'>Overview</span>
     </h2>
     <p>
-      Other Wikipedias will follow the same process as setting up Simple Wikipedia or English Wikipedia. The steps are summarized below, but you should read both <a href="http://xowa.sourceforge.net/setup_simpewiki.html" class="external text" rel="nofollow">Help:Set up Simple Wikipedia</a> and <a href="http://xowa.sourceforge.net/setup_enwiki.html" class="external text" rel="nofollow">Help:Set up English Wikipedia</a>
+      Other Wikipedias will follow the same process as setting up Simple Wikipedia or English Wikipedia. The steps are summarized below, but you should read both <a href="https://gnosygnu.github.io/xowa//setup_simpewiki.html" class="external text" rel="nofollow">Help:Set up Simple Wikipedia</a> and <a href="https://gnosygnu.github.io/xowa//setup_enwiki.html" class="external text" rel="nofollow">Help:Set up English Wikipedia</a>
     </p>
     <p>
       Note that some Wikipedias will require a lot of disk space. For example, German Wikipeda requires at least 40 GB. Depending on your location it may take several hours to download that much data. Please prepare accordingly.
@@ -66,7 +66,7 @@
       When you're ready to start, do the following:
     </p>
     <ul>
-      <li>Go to <a href="http://xowa.sourceforge.net/image_dbs.html" class="external text" rel="nofollow">the download page</a>
+      <li>Go to <a href="https://gnosygnu.github.io/xowa//image_dbs.html" class="external text" rel="nofollow">the download page</a>
       </li>
       <li>Find your wiki in the list and click on the link
       </li>
@@ -114,13 +114,13 @@
 
 <div id='mw-panel' class='noprint'>
   <div id='p-logo'>
-    <a style="background-image: url(xowa-logo.png);" href="http://xowa.sourceforge.net" title="Visit the main page"></a>
+    <a style="background-image: url(xowa-logo.png);" href="https://gnosygnu.github.io/xowa/" title="Visit the main page"></a>
   </div>
   <div class="portal" id='xowa-portal-home'>
     <h3>XOWA</h3>
     <div class="body">
       <ul>
-        <li><a href="http://xowa.sourceforge.net" title='Visit the main page'>Main page</a></li>
+        <li><a href="https://gnosygnu.github.io/xowa/" title='Visit the main page'>Main page</a></li>
         <li><a href="blog.html" title='Follow XOWA''s development process'>Blog</a></li>
         <li><a href="screenshots.html" title='See screenshots of XOWA'>Screenshots</a></li>
         <li><a href="download.html" title='Download the XOWA application'>Download XOWA</a></li>
