--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,39 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class='mw-headline' id='Release:_NONE_.282015-07-26_21:55_Sun.29'>Release: NONE (2015-07-26 21:55 Sun)</span>
+    </h2>
+    <p>
+      I'm skipping the release this week. I'm working on getting the multi-language dropdown for Chinese and Serbian wikis (and any other wikis with variant languages). I ended up rewriting a lot of internal URL logic to support URLs like "zh.wikipedia.org/zh-hans/A" instead of "zh.wikipedia.org/wiki/A". I didn't have much time to work on anything else.
+    </p>
+    <p>
+      I'll resume work on the other items for 2.8.1.
+    </p>
+    <h2>
+      <span class='mw-headline' id='Release:_v2.7.3.3_.282015-07-21_23:45_Tue.29'>Release: v2.7.3.3 (2015-07-21 23:45 Tue)</span>
+    </h2>
+    <h3>
+      <span class='mw-headline' id='Online_download_sometimes_downloads_wikis_from_your.org_instead_of_wikimedia.org'>Online download sometimes downloads wikis from your.org instead of wikimedia.org</span>
+    </h3>
+    <p>
+      As per <a href="https://github.com/gnosygnu/xowa/issues/7" class="external text" rel="nofollow">https://github.com/gnosygnu/xowa/issues/7</a> partial dumps were only importable for time zones west of Greenich Mean Time. v2.7.3.3 fixes it for all time zones.
+    </p>
+    <p>
+      Yet another thanks to Anselm for working through this issue.
+    </p>
+    <h2>
+      <span class='mw-headline' id='Release:_v2.7.3.2_.282015-07-20_23:45_Mon.29'>Release: v2.7.3.2 (2015-07-20 23:45 Mon)</span>
+    </h2>
+    <h3>
+      <span class='mw-headline' id='Online_download_sometimes_downloads_wikis_from_your.org_instead_of_wikimedia.org_2'>Online download sometimes downloads wikis from your.org instead of wikimedia.org</span>
+    </h3>
+    <p>
+      Unfortunately, a change in v2.7.3.1 caused XOWA to download wikis from your.org for partial dumps.
+    </p>
+    <p>
+      Thanks to Anselm for continuing on this issue.
+    </p>
+    <h2>
       <span class='mw-headline' id='Release:_v2.7.3.1_.282015-07-19_20:00_Sun.29'>Release: v2.7.3.1 (2015-07-19 20:00 Sun)</span>
     </h2>
     <h3>
